chrome/test/data/nacl/bad/ppapi_bad_manifest_nexe_arch.nmf
{
  "program": {
    "unknown_arch": {"url": "ppapi_bad_no_ppp_instance_x86-32.nexe"}
  }
}
